[tool.poetry]
name = "py-boy"
version = "0.1.0"
description = ""
authors = ["Kyle Bernstein <kbernst30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.0"
PySDL2 = "^0.9.9"
pysdl2-dll = "^2.0.16"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
