[tool.poetry]
name = "py-boy"
version = "0.1.0"
description = ""
authors = ["Kyle Bernstein <kbernst30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.5.21"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
